--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "scripts": {
     "start": "webpack --mode=development --watch --stats-error-details --env beta",
     "build:prod": "webpack --mode=production",
-    "build:beta": "webpack --mode=production --env beta"
+    "build:beta": "webpack --mode=production --env beta",
+    "postbuild:prod": "npm run compress -- -v prod",
+    "postbuild:beta": "npm run compress -- -v beta",
+    "compress": "sh ./build/build.sh",
+    "release": "rm -rf release && npm run build:beta && npm run build:prod"
   },
   "repository": {
     "type": "git",
