--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   "license": "GNU GPL v3.0",
   "dependencies": {
     "@broxus/await-semaphore": "^0.1.5",
-    "@wallet/nekoton-wasm": "0.1.26",
+    "@broxus/ever-wallet-wasm": "0.1.26",
     "buffer": "^6.0.3",
     "classnames": "^2.3.2",
     "copy-to-clipboard": "^3.3.3",
