chore: update repository link

--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://gitlab.bf.rocks/egorkomarov/ever-wallet-browser-extension.git"
+    "url": "https://github.com/broxus/ever-wallet-browser-extension.git"
   },
   "author": "",
   "license": "GNU GPL v3.0",
